[package]
name = "bevy-orbit-camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_core_pipeline",
] }

[dev-dependencies]
bevy = { version = "0.13" }
bevy_egui = "0.25"
